ragapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: my-app-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: ragapp.local

      http:
        paths:

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8000
